--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 body {
     background-color: black;
     color: aquamarine;
+
+     font-family: "Edu NSW ACT Hand Pre", cursive;    
+}
+
+header {
+    font-size: 50px;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+p {
+    font-size: 20px;
 }
