--- a/style.css
+++ b/style.css
@@ -22,3 +22,9 @@ h1 {
 p {
     font-size: 20px;
 }
+
+section {
+    background-color: rgb(29, 148, 239);
+    padding-bottom: 80px;
+    padding-top: 80px;
+}
