--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
     font-size: 20px;
 }
 
-section {
+.chamada {
     background-color: rgb(29, 148, 239);
     padding-bottom: 80px;
     padding-top: 80px;
